# estruturas-de-dados-basicas-I

algoritmos-de-busca/: README.md
algoritmos-de-busca/code/: CMakeLists.txt
algoritmos-de-busca/code/src/: searching.cpp  searching.h  timing_template.cpp
algoritmos-de-busca/code/tests/: main.cpp
algoritmos-de-busca/data/: iterativexrecursive.gp  linearxbinary.gp  timing-data.txt
algoritmos-de-busca/data/bsearch_it/: bi1.txt  bi10.txt  bi2.txt  bi3.txt  bi4.txt  bi5.txt  bi6.txt  bi7.txt  bi8.txt  bi9.txt  media.txt
algoritmos-de-busca/data/bsearch_rec/: br1.txt  br10.txt  br2.txt  br3.txt  br4.txt  br5.txt  br6.txt  br7.txt  br8.txt  br9.txt  media.txt
algoritmos-de-busca/data/lsearch/: l1.txt  l10.txt  l2.txt  l3.txt  l4.txt  l5.txt  l6.txt  l7.txt  l8.txt  l9.txt  media.txt
algoritmos-de-ordenacao/: .gitignore  README.md  author.md
algoritmos-de-ordenacao/source/: main.cpp
algoritmos-de-ordenacao/source/lib/: sorting.h
hash-table/: README.md  author.md
hash-table/docs/: output_driver.txt
hash-table/source/: CMakeLists.txt
hash-table/source/driver/: account.cpp  account.h  driver_ht.cpp
hash-table/source/include/: hashtbl.h  hashtbl.inl
hash-table/source/test/: main.cpp
list/: .gitignore  README.md  author.md
list/source/include/: list.h
list/source/tests/: main.cpp
vector/: README.md  author.md
vector/source/: CMakeLists.txt  iterator_tests.cpp  main.cpp  move_semantics_tests.cpp  vector.h  vector_tests.h
